# LearnWithAnime

./: AGENTS.md  README.md  TODO.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy-backend.yml
backend/: Cargo.toml  Dockerfile  README.md
backend/data/cards/: 001.jsonl  002.jsonl  003.jsonl  004.jsonl  005.jsonl  006.jsonl  007.jsonl  008.jsonl  009.jsonl  010.jsonl  011.jsonl  012.jsonl  013.jsonl  014.jsonl  015.jsonl  016.jsonl  017.jsonl  018.jsonl  019.jsonl  020.jsonl  021.jsonl  022.jsonl  023.jsonl  024.jsonl  025.jsonl  026.jsonl  027.jsonl  028.jsonl  029.jsonl  030.jsonl  031.jsonl  032.jsonl  033.jsonl  034.jsonl  035.jsonl  036.jsonl  037.jsonl  038.jsonl  039.jsonl  040.jsonl  (+82 more)
backend/data/decks/: shingeki.json
backend/data/kana/: kana.json
backend/data/kanji/: jlpt-n1.jsonl  jlpt-n2.jsonl  jlpt-n3.jsonl  jlpt-n4.jsonl  jlpt-n5.jsonl
backend/data/radicals/: kangxi.json
backend/migrations/: 20260523000000_init_schema.sql  20260523000001_enable_rls.sql  20260523000002_add_rls_policies.sql  20260523000003_user_llm_settings.sql  20260523000004_split_temperatures.sql  20260523000005_add_advanced_settings.sql  20260523000006_multiple_configs.sql  20260523000007_user_roles.sql  20260523000008_enable_rls_user_roles.sql  20260523000009_drop_content_tables.sql
backend/src/: ai.rs  catalog.rs  db.rs  main.rs
data/cards/: common.json
data/decks/: naruto.json
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.vue  index.css  supabase.ts
frontend/src/components/: AdminPanel.vue  AiPlayground.vue  AuthPage.vue  HeaderSection.vue
frontend/src/services/: api.ts  cards.ts  kanji.ts  llm.ts
frontend/src/views/: HomeView.vue  KanjiView.vue
tools/: .gitignore  Cargo.toml  README.md  anime_by_file_count.md  merge_and_extract.sh  merge_groups.toml  prepare_merged_sources.sh  process_anime.sh
tools/src/: build_jmdict.rs  enrich_catalog.rs  export_kana.rs  export_radicals.rs  extract_anime_freq.rs  generate_cards.rs
