[package]
name = "lwm-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enrich-catalog"
path = "src/enrich_catalog.rs"

[[bin]]
name = "export-radicals"
path = "src/export_radicals.rs"

[[bin]]
name = "build-jmdict"
path = "src/build_jmdict.rs"

[[bin]]
name = "export-kana"
path = "src/export_kana.rs"

[[bin]]
name = "generate-cards"
path = "src/generate_cards.rs"

[[bin]]
name = "extract-anime-freq"
path = "src/extract_anime_freq.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.31"
anyhow = "1"
uuid = { version = "1", features = ["v5"] }
encoding_rs = "0.8"
